Add data, usage Room

--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -23,7 +23,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/tv_name_disabled"
+            android:id="@+id/tv_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -35,14 +35,13 @@
         </TextView>
 
         <TextView
-            android:id="@+id/tv_count_disabled"
+            android:id="@+id/tv_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
             android:text="@string/count">
-
         </TextView>
 
 
